--- a/index.html
+++ b/index.html
@@ -86,30 +86,7 @@
     </hr>
     <hr noshade>
     <h3>Contact Me</h3>
-    <form action="mailto:sarahnasim2016@gmail.com" method="post" enctype="text/plain">
-        <label>Your Name: </label>
-        <input type="text" name="Name- " value="">
-        <br> <br>
-        <label>Do you want to sign up for the email list?</label>
-        <input type="checkbox" name="" value="">
-        <br><br>
-        <label>Email id: </label>
-        <input type="email" name="Email id- " value="">
-        <br><br>
-        <label>Do you want to sign up for the contact no. list?</label>
-        <input type="checkbox" name="" value="">
-        <br><br>
-        <label>Phone number: </label>
-        <input type="Password" name="Phone no.- " value="">
-        <br>
-        <br>
-        <label>Your message:</label>
-        <br>
-        <textarea name="Message- " rows="4" cols="15"></textarea>
-        <br>
-        <input type="Submit" name="" value="Submit">
-        <br>
-    </form>
+    <a href="contact.html">Click here</a>
     </hr>
 </body>
 </html>
